# owasp-benchmark-audit-organizer

./: .gitignore  README.md  pyproject.toml
benchmark/: README.md
benchmark/public/: README.md
docs/: experiment-design.md  organizer-guide.md  participant-guide.md
organizer/: README.md  selected_cases.csv  selected_cases_pilot20.csv  selected_cases_vuln10.csv  selected_cases_vuln90.csv
results/: score_summary.csv
scripts/: benchmark_common.py  download_owasp_benchmark.py  grade_submissions.py  prepare_public_benchmark.py  select_cases.py
submissions/dummy-model/: BenchmarkTest00027.json  BenchmarkTest00436.json  BenchmarkTest00708.json
